Fix text not being cut off properly in Chosen selects

--- a/gui/css/main.css
+++ b/gui/css/main.css
@@ -2308,24 +2308,19 @@
     max-height: 33px;
     min-height: 33px;
   }
+  .chosen-container-single a.chosen-single {
+    padding-right: 4em;
+  }
   .chosen-container-active.chosen-with-drop ul.chosen-choices,
   .chosen-container-active.chosen-with-drop a.chosen-single {
     border-radius: 3px 3px 0 0;
   }
-  .chosen-container-active.chosen-with-drop a.chosen-single {
-    border-top: 1px solid #08c;
-    border-left: 1px solid #08c;
-  }
-  .chosen-container-active.chosen-with-drop ul.chosen-choices {
-    border-top: 1px solid #08c;
-    border-left: 1px solid #08c;
-    border-right: 1px solid #08c;
-  }
+  .chosen-container-active.chosen-with-drop a.chosen-single,
+  .chosen-container-active.chosen-with-drop ul.chosen-choices,
   .chosen-container-active.chosen-with-drop ul.chosen-choices + .chosen-drop,
   .chosen-container-active.chosen-with-drop a.chosen-single + .chosen-drop {
-    border-left: 1px solid #08c;
-    border-right: 1px solid #08c;
-    border-bottom: 1px solid #08c;
+    border: none;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, .3);
   }
   .chosen-container-single a.chosen-single div b {
     display: none;
@@ -2337,7 +2332,7 @@
    * ------------------------------------------------------
    */
   .picker__input.picker__input--active {
-    border: 1px solid #08c;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, .3);
   }
 
 
@@ -2352,7 +2347,6 @@
     padding: .4356em .5em;
     width: 100%;
     min-height: 33px;
-    outline: none;
     cursor: pointer;
 
     -webkit-appearance: none;
@@ -2363,10 +2357,6 @@
     background-image: url("../i/custom-select.png");
     background-repeat: no-repeat;
     background-position: 100% 50%;
-  }
-  .select select:focus,
-  .select select:active {
-    border: 1px solid #08c;
   }
 
 
